# Numerische-Str-mungssimulation

./: .gitignore  CMakeLists.txt
run/: .gitignore  dragonfly.in  hummingbird.in
src/dragonfly_src/: data.h  input.cpp  input.h  main.cpp  output.cpp  output.h  setup.cpp  setup.h  solve.cpp  solve.h
src/hummingbird_src/: setup.cpp
src/spider_src/: data.h  input.cpp  input.h  main.cpp  output.cpp  output.h  setup.cpp  setup.h
